# obstacle_avoidance

./: .gitignore  README.md
src/command/: CMakeLists.txt  package.xml
src/command/esp8266/: esp8266.ino
src/command/include/: command_node.hpp  command_type.hpp  serial_comm.hpp
src/command/src/: command_node.cpp  serial_comm.cpp
src/config_file/: CMakeLists.txt
src/config_file/config/: params.yaml
src/controller/: CMakeLists.txt  package.xml
src/controller/include/: command.hpp  command_type.hpp  controller_type.hpp  geometry_utils.hpp  land_vehicle_node.hpp  land_vehicle_type.hpp  obstacle_avoidance.hpp
src/controller/src/: command.cpp  geometry_utils.cpp  land_vehicle_node.cpp  obstacle_avoidance.cpp
src/land_vehicle/: CMakeLists.txt  package.xml
src/land_vehicle/models/land_vehicle/: model.sdf
src/land_vehicle/models/obstacle/: model.sdf
src/land_vehicle/world/: land_vehicle.sdf
src/obstacle_avoidance/: CMakeLists.txt  package.xml
src/obstacle_avoidance/config/: params.yaml
src/obstacle_avoidance/launch/: land_launch.py
src/obstacle_avoidance/models/land_vehicle/: model.sdf
src/obstacle_avoidance/models/obstacle/: model.sdf
src/obstacle_avoidance/world/: cavern.sdf  cellar.sdf  land_tunnel.sdf  land_vehicle.sdf  tables.sdf
src/serial_comm/: CMakeLists.txt  package.xml
src/serial_comm/include/: serial_comm.hpp  serial_type.hpp
src/serial_comm/src/: serial_comm.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: params.yaml
src/simulation/launch/: land_launch.py
(+3 files in other folders)
